--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,6 @@
 	<packageSources>
 		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="Prerelease" value="https://pkgs.dev.azure.com/andreas0539/_packaging/Prerelease/nuget/v3/index.json" protocolVersion="3" />
-    <add key="Released" value="https://pkgs.dev.azure.com/andreas0539/_packaging/Released/nuget/v3/index.json" protocolVersion="3" />
+    <add key="Released" value="https://pkgs.dev.azure.com/andreas0539/_packaging/Released/nuget/v3/index.json" protocolVersion="3" />-
   </packageSources>
 </configuration>
